force-app/main/default/objects/vlocity_ps__QuoteAppliedPromotionItem__c/fields/vlocity_ps__QuoteAppliedPromotionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__QuoteAppliedPromotionId__c</fullName>
    <label>Quote Applied Promotion</label>
    <referenceTo>vlocity_ps__QuoteAppliedPromotion__c</referenceTo>
    <relationshipLabel>Quote Applied Promotion Affected Items</relationshipLabel>
    <relationshipName>QuoteAppliedPromotionAffectedItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>