force-app/main/default/objects/vlocity_ps__QuoteAppliedPromotionItem__c/fields/vlocity_ps__QuoteLineItemId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__QuoteLineItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Quote Applied Promotion Affected Items</relationshipLabel>
    <relationshipName>QuoteAppliedPromotionAffectedItems</relationshipName>
    <type>Lookup</type>
</CustomField>